Few additional class-info tests mostly with inner handling